<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Rule_2">

    <TextView
            android:text="@string/Explain_2_1"
            android:layout_width="311dp"
            android:layout_height="65dp"
            android:id="@+id/rule_explain_2_1" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/rule_explain2" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/Explain_2_2"
            android:layout_width="286dp"
            android:layout_height="64dp"
            android:id="@+id/rule_explain_2_2" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rule_explain_2_1" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="146dp"
            android:layout_height="81dp" app:srcCompat="@drawable/wood_kanban2"
            android:id="@+id/rule2_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="146dp"
            android:layout_height="81dp" app:srcCompat="@drawable/wood_kanban2"
            android:id="@+id/rule2_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/rule_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/rule_explain2" android:textSize="36sp"
            android:textColor="@android:color/background_light" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>