<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Battle" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/text_2row" android:textColor="@android:color/background_light" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.515"
            android:text="a" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_1row"/>
    <TextView
            android:text="@string/hp2"
            android:layout_width="57dp"
            android:layout_height="30dp"
            android:id="@+id/hp2" android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/battleStart"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.416"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/player2"/>
    <TextView
            android:text="@string/hp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hp1" app:layout_constraintEnd_toStartOf="@+id/battleStart"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name1"/>
    <ImageView
            android:layout_width="138dp"
            android:layout_height="157dp" app:srcCompat="@drawable/animal_bear_hokkyoku"
            android:id="@+id/player2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/animal_gorilla_drumming"
            android:id="@+id/player1" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/battleStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/battleStart"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.345"/>
    <TextView
            android:text="@string/name1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/name1" app:layout_constraintEnd_toStartOf="@+id/battleStart"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/player1"/>
    <TextView
            android:text="@string/name2"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:id="@+id/name2" android:textSize="24sp"
            android:textColor="@android:color/background_light" app:layout_constraintStart_toEndOf="@+id/battleStart"
            android:layout_marginStart="8dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/player2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/hp2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turn_display2" android:textSize="24sp" android:textColor="@android:color/background_light"
            android:text="ターン" app:layout_constraintHorizontal_bias="0.498" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/player2" app:layout_constraintStart_toEndOf="@+id/player1"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/battleStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turn_display" app:layout_constraintTop_toBottomOf="@+id/turn_display2"
            android:layout_marginBottom="24sp" app:layout_constraintBottom_toTopOf="@+id/battleStart"
            android:textColor="@android:color/background_light" android:textSize="24sp" android:text="0"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/player2"
            app:layout_constraintStart_toEndOf="@+id/player1" android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/text_1row" android:textColor="@android:color/background_light" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.515"
            android:text="a" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/battleStart"/>
</android.support.constraint.ConstraintLayout>